Fix for address modal getting cut off

--- a/src/js/personalization/va-profile-beta/sass/va-profile.scss
+++ b/src/js/personalization/va-profile-beta/sass/va-profile.scss
@@ -20,3 +20,9 @@
 .va-profile-btn {
   text-decoration: none;
 }
+
+// @todo Should this be a global change?
+.va-profile-wrapper .va-modal-inner {
+  max-height: 100%;
+  overflow-y: auto;
+}
